Fix bottom of text cut off in select boxes

--- a/plugins/item_tasks/web_client/stylesheets/controlWidget.styl
+++ b/plugins/item_tasks/web_client/stylesheets/controlWidget.styl
@@ -1,3 +1,5 @@
+@import '~nib/index.styl'
+
 .g-control-widget-label
   margin-bottom 2px
 
@@ -9,3 +11,6 @@
 .g-control-item
     input.form-control
       height auto
+
+    select
+      appearance none
